fix margin-top spacing again

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,5 +3,5 @@ body {
 }
 
 .fluxnav-logo {
-  margin-top: -5px;
+  margin-top: -10px;
 }
